2007-06-26  Satoshi Nakagawa <artension@gmail.com>

	Workaround for objc_method problem, must add ':' as suffix in some cases.

2007-06-26  Satoshi Nakagawa <artension@gmail.com>

	Converted addRubyMethod to objc_method.
	Added objc_method to some methods.

2007-06-26  Satoshi Nakagawa <artension@gmail.com>

	Released 0.3.

2007-06-26  Satoshi Nakagawa <artension@gmail.com>

	Added method type declarations of objc callback methods.
	Simplified JavaScript bridge.

2007-06-25  Satoshi Nakagawa <artension@gmail.com>

	Changed 'keywords' to 'highlight'.

2007-06-25  Satoshi Nakagawa <artension@gmail.com>

	Refactoring.

2007-06-25  Satoshi Nakagawa <artension@gmail.com>

	Ported Splitter to ruby.

2007-06-25  Satoshi Nakagawa <artension@gmail.com>

	Released 0.2.

2007-06-23  Satoshi Nakagawa <artension@gmail.com>

	Changed to select inputting edit on key down of member list.

2007-06-23  Satoshi Nakagawa <artension@gmail.com>

	Changed to update member menu explicitly.

2007-06-23  Satoshi Nakagawa <artension@gmail.com>

	Changed to show conditions of DCC file sending items accurately.

2007-06-23  Satoshi Nakagawa <artension@gmail.com>

	Added multi line paste sheet.

2007-06-23  Satoshi Nakagawa <artension@gmail.com>

	Changed not to show DCC window as key window when received DCC file transfer request.
	Changed to stop highlighting for user's own messages.

2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Added input history.

2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Improved paste behaviors.

2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to render white spaces as &nbsp;.

2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to force single line on the inputting edit.
	Fixed a bug, cannot use paste menu on log views.

2007-06-21  Satoshi Nakagawa <artension@gmail.com>

	Added dislike words.
	Supported character attributes of mIRC.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>
