@@ -1,0 +1,8 @@
+// Created by Satoshi Nakagawa.
+// You can redistribute it and/or modify it under the Ruby's license or the GPL2.
+
+#import <Cocoa/Cocoa.h>
+
+@interface OldEventManager : NSObject
+
+@end
