@@ -1,0 +1,13 @@
+// Created by Satoshi Nakagawa.
+// You can redistribute it and/or modify it under the Ruby's license or the GPL2.
+
+#import "OldEventManager.h"
+
+@implementation OldEventManager
+
++ (float)getDoubleClickTime
+{
+  return GetDblTime();
+}
+
+@end
